src/test/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-domain-enonic-net
  namespace: mycloud-mysolution-myenv-myservice
  annotations:
    enonic.cloud/ingress.cert.manage: "true"
    enonic.cloud/xp7.vhost.mapping.1.source: /a
    enonic.cloud/xp7.vhost.mapping.1.target: /admin
    enonic.cloud/xp7.vhost.mapping.1.idproviders: system
spec:
  rules:
    - host: test-domain.enonic.net
      http:
        paths:
          - backend:
              serviceName: master
              servicePort: 8080
            path: /a
