src/test/example-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mycloud-mysolution-myenv-myservice
#  annotations:
#    enonic.cloud/remove.with.xp7deployment: mycloud-mysolution-myenv-myservice
